--- a/MyFiles/css/grid.css
+++ b/MyFiles/css/grid.css
@@ -32,6 +32,7 @@ body {
 .grid_1,
 .grid_2,
 .grid_3,
+.grid_32,
 .grid_4,
 .grid_5,
 .grid_6,
@@ -86,6 +87,11 @@ body {
 .container_12 .grid_3 {
   width: 220px;
 }
+.container_12 .grid_32 {
+  margin:4px;
+  width: 183px;
+}
+	
 
 .container_12 .grid_4 {
   width: 300px;
@@ -355,3 +361,4 @@ body {
 .container_12 {
   zoom: 1;
 }
+
