--- a/trunk/MyFiles/Files/css/theme.css
+++ b/trunk/MyFiles/Files/css/theme.css
@@ -42,6 +42,20 @@
 .elfinder-contextmenu .ui-state-hover { background: #3875d7; color:#fff; }
 .elfinder-contextmenu .ui-state-hover .elfinder-contextmenu-arrow { background-image:url('../img/arrows-active.png'); }
 
+h2 {
+	padding:5px;
+	text-align:right;
+}
+
+h2 a {
+	color:#FFFFFF;
+	text-decoration:none;
+}
+
+h2 a:hover {
+	color:#CCCCCC;
+	text-decoration:none;
+}
 
 
 
