--- a/trunk/MyFiles/css/login.css
+++ b/trunk/MyFiles/css/login.css
@@ -191,8 +191,13 @@
 	background-image: -moz-linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
 	background-image: linear-gradient(top left 90deg, #6ec2e8 0%, #b6e2ff 100%);
 }
-
-
+.dialog #container .success {
+	color:#bf0000;
+	padding:10px;
+	line-height:auto;
+	text-align:center;
+	font-size:1.1em;
+}
 
 
 
