--- a/trunk/MyFiles/Admin/css/stylemin.css
+++ b/trunk/MyFiles/Admin/css/stylemin.css
@@ -135,7 +135,7 @@ section h3 {
 }
 
 section div#content2 table {
-	border:1px solid #334960;
+	border:1px solid #f90;
 	width:100%;
 	background:#dde4eb;
 }
@@ -157,7 +157,7 @@ section div#content2 div.box1 {
 	padding:10px 3%;
 	color:#725575;
 	background:#dde4eb;
-	border:1px solid #add3d3;
+	border:1px solid #F90;
 }
 
 section div#content2 div.box1 table {
